<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" android:orientation="vertical" tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/size"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <RadioGroup
        android:id="@+id/grpSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="@+id/radSml">

        <RadioButton
            android:id="@+id/radSml"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/small"/>
        <RadioButton
            android:id="@+id/radMed"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/medium"/>
        <RadioButton
            android:id="@+id/radLrg"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/large"/>

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toppings"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/chkCheese"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cheese"/>
            <CheckBox
                android:id="@+id/chkPepperoni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pepperoni"/>
            <CheckBox
                android:id="@+id/chkSausage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sausage"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/chkBacon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bacon"/>
            <CheckBox
                android:id="@+id/chkPepper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pepper"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtOrder" />

</LinearLayout>